src2/objects/Action_Item_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Account_Channel__c</fullName>
        <label>Account Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Item_Rule_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Action Item Rule UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Assign_to_Queue__c</fullName>
        <label>Assign to Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assign_To_Queue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Item_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ActionItem_Assignment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Procedure__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Current Procedure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>equals</operation>
                <value>Procedure</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Action Item Rules (Current Procedure)</relationshipLabel>
        <relationshipName>Action_Item_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language_Key_Code__c</fullName>
        <label>Language Key Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Action_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Action Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>equals</operation>
                <value>Activity,Step</value>
            </filterItems>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Action Item Rules (Next Action Item)</relationshipLabel>
        <relationshipName>Action_Item_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Procedure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>equals</operation>
                <value>Procedure</value>
            </filterItems>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Action Item Rules (Next Procedure)</relationshipLabel>
        <relationshipName>Action_Item_Rules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Action_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Action Item</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Action Item Rules</relationshipLabel>
        <relationshipName>Action_Item_Rules3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>THIRD_PARTY_CARRIER</fullName>
                    <label>Carrier</label>
                </value>
                <value>
                    <fullName>THIRD_PARTY_WAREHOUSE</fullName>
                    <label>Warehouse</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Execute Activity</fullName>
                </value>
                <value>
                    <fullName>Step</fullName>
                </value>
                <value>
                    <fullName>Change Procedure</fullName>
                </value>
                <value>
                    <fullName>Assignment/Change Status/Priority</fullName>
                </value>
                <value>
                    <fullName>Contact Selection</fullName>
                    <isActive>false</isActive>
                    <label>Contact Selection</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action Item Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Item Rules</pluralLabel>
    <recordTypes>
        <fullName>Assignment_Change_Status_Priority</fullName>
        <active>true</active>
        <label>Assignment/Change Status/Priority</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_Procedure</fullName>
        <active>true</active>
        <label>Change Procedure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalate</fullName>
        <active>true</active>
        <label>Escalate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Execute_Activity</fullName>
        <active>true</active>
        <label>Execute Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step</fullName>
        <active>true</active>
        <label>Step</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assignment_To_Queue</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
TEXT(Type__c) = &apos;Assignment/Change Status&apos;, 
TEXT(Assignment_Type__c) = &apos;Queue&apos;,
ISBLANK( TEXT(Assign_to_Queue__c))
)</errorConditionFormula>
        <errorMessage>Queue Field must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Assignment_To_User</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
TEXT(Type__c) = &apos;Assignment/Change Status&apos;, 
TEXT(Assignment_Type__c) = &apos;User&apos;, 
ISBLANK(  Assign_to_User__c )
)</errorConditionFormula>
        <errorMessage>User Field must be set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Procedure</fullName>
        <active>true</active>
        <description>check that the Next Procedure field is set with Proedure</description>
        <errorConditionFormula>AND ( 
TEXT(Type__c) = &apos;Change Procedure&apos;, 
NOT(ISBLANK(Next_Procedure__c)), 
NOT(ISBLANK(Next_Action_Item__c)), 
TEXT(Next_Procedure__r.Type__c)&lt;&gt; &apos;Procedure&apos; 
)</errorConditionFormula>
        <errorMessage>Next Action Item must be Procedure Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Execute_Activity</fullName>
        <active>true</active>
        <description>check that the New Action Item field is set with activity</description>
        <errorConditionFormula>AND (
NOT(ISBLANK(Next_Action_Item__c)),
TEXT(Type__c) = &apos;Execute Activity&apos;,
TEXT(Next_Action_Item__r.Type__c)&lt;&gt; &apos;Activity&apos;)</errorConditionFormula>
        <errorMessage>Next Action Item must be Acivity Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Step</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
NOT(ISBLANK(Next_Action_Item__c)),
TEXT(Type__c) = &apos;Step&apos;,
TEXT(Next_Action_Item__r.Type__c)&lt;&gt; &apos;Step&apos;)</errorConditionFormula>
        <errorMessage>Next Action Item must be a Step Type</errorMessage>
    </validationRules>
</CustomObject>